funky/parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> FIXITY_DECLARATION
Rule 1     MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY
Rule 2     BODY -> OPEN_BRACE IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
Rule 3     BODY -> OPEN_BRACE TOP_DECLARATIONS CLOSE_BRACE
Rule 4     IMPORT_DECLARATIONS -> IMPORT_DECLARATIONS ENDSTATEMENT IMPORT_DECLARATION
Rule 5     IMPORT_DECLARATIONS -> IMPORT_DECLARATION
Rule 6     IMPORT_DECLARATION -> IMPORT IDENTIFIER
Rule 7     TOP_DECLARATIONS -> TOP_DECLARATIONS ENDSTATEMENT TOP_DECLARATION
Rule 8     TOP_DECLARATIONS -> TOP_DECLARATION
Rule 9     TOP_DECLARATION -> TYPE_DECLARATION
Rule 10    TOP_DECLARATION -> DECLARATION
Rule 11    TYPE_DECLARATION -> NEWTYPE TYPENAME TYVARS EQUALS CONSTRUCTORS
Rule 12    TYVARS -> TYVARS IDENTIFIER
Rule 13    TYVARS -> <empty>
Rule 14    CONSTRUCTORS -> CONSTRUCTORS PIPE CONSTRUCTOR
Rule 15    CONSTRUCTORS -> CONSTRUCTOR
Rule 16    CONSTRUCTOR -> TYPENAME ATYPES
Rule 17    DECLARATIONS -> OPEN_BRACE DECLARATIONS_LIST CLOSE_BRACE
Rule 18    DECLARATIONS -> OPEN_BRACE CLOSE_BRACE
Rule 19    DECLARATIONS_LIST -> DECLARATION ENDSTATEMENT DECLARATIONS_LIST
Rule 20    DECLARATIONS_LIST -> DECLARATION
Rule 21    DECLARATION -> GEN_DECLARATION
Rule 22    DECLARATION -> FUNCTION_LHS RHS
Rule 23    DECLARATION -> LPAT RHS
Rule 24    GEN_DECLARATION -> FIXITY_DECLARATION
Rule 25    GEN_DECLARATION -> <empty>
Rule 26    FIXITY_DECLARATION -> SETFIX ASSOCIATIVITY INTEGER OP
Rule 27    ASSOCIATIVITY -> LEFTASSOC
Rule 28    ASSOCIATIVITY -> RIGHTASSOC
Rule 29    ASSOCIATIVITY -> NONASSOC
Rule 30    TYPE -> ATYPE
Rule 31    TYPE -> ATYPE ARROW TYPE
Rule 32    ATYPES -> ATYPES ATYPE
Rule 33    ATYPES -> <empty>
Rule 34    ATYPE -> TYPENAME
Rule 35    ATYPE -> IDENTIFIER
Rule 36    ATYPE -> OPEN_PAREN TYPE CLOSE_PAREN
Rule 37    FUNCTION_LHS -> IDENTIFIER APAT APATS
Rule 38    FUNCTION_LHS -> OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
Rule 39    FUNCTION_LHS -> INFIX_FUNCTION_DEFINITION
Rule 40    INFIX_FUNCTION_DEFINITION -> LPAT INFIX_FUNCTION LPAT
Rule 41    RHS -> EQUALS EXP
Rule 42    RHS -> EQUALS EXP WHERE DECLARATIONS
Rule 43    RHS -> GDRHS
Rule 44    RHS -> GDRHS WHERE DECLARATIONS
Rule 45    GDRHS -> GIVEN EXP EQUALS EXP
Rule 46    GDRHS -> GIVEN EXP EQUALS EXP GDRHS
Rule 47    EXP -> INFIX_EXP
Rule 48    INFIX_EXP -> LEXP OP INFIX_EXP
Rule 49    INFIX_EXP -> MINUS INFIX_EXP
Rule 50    INFIX_EXP -> LEXP
Rule 51    LEXP -> LAMBDA APAT APATS ARROW EXP
Rule 52    LEXP -> LET DECLARATIONS IN EXP
Rule 53    LEXP -> EXP IF EXP ELSE EXP
Rule 54    LEXP -> MATCH EXP OF OPEN_BRACE ALTS CLOSE_BRACE
Rule 55    LEXP -> FEXP
Rule 56    FEXP -> FEXP AEXP
Rule 57    FEXP -> AEXP
Rule 58    AEXP -> USED_VAR
Rule 59    AEXP -> USED_TYPENAME
Rule 60    AEXP -> LITERAL
Rule 61    AEXP -> OPERATOR_FUNC
Rule 62    AEXP -> OPEN_PAREN EXP CLOSE_PAREN
Rule 63    OPERATOR_FUNC -> OPEN_PAREN OP CLOSE_PAREN
Rule 64    CONSTRUCTION_PARAMS -> CONSTRUCTION_PARAMS AEXP
Rule 65    CONSTRUCTION_PARAMS -> AEXP
Rule 66    ALTS -> ALT ENDSTATEMENT ALTS
Rule 67    ALTS -> ALT
Rule 68    ALT -> LPAT ARROW EXP
Rule 69    ALT -> <empty>
Rule 70    LPAT -> APAT
Rule 71    LPAT -> MINUS OPEN_PAREN INTEGER CLOSE_PAREN
Rule 72    LPAT -> MINUS OPEN_PAREN FLOAT CLOSE_PAREN
Rule 73    LPAT -> TYPENAME APAT APATS
Rule 74    APAT -> PARAM
Rule 75    APAT -> TYPENAME
Rule 76    APAT -> LITERAL
Rule 77    APAT -> OPEN_PAREN LPAT CLOSE_PAREN
Rule 78    VAROP -> VARSYM
Rule 79    VAROP -> INFIX_FUNCTION
Rule 80    INFIX_FUNCTION -> BACKTICK IDENTIFIER BACKTICK
Rule 81    OP -> VAROP
Rule 82    APATS -> APAT APATS
Rule 83    APATS -> <empty>
Rule 84    VARSYM -> PLUS
Rule 85    VARSYM -> MINUS
Rule 86    VARSYM -> TIMES
Rule 87    VARSYM -> DIVIDE
Rule 88    VARSYM -> MODULO
Rule 89    VARSYM -> POW
Rule 90    VARSYM -> EQUALITY
Rule 91    VARSYM -> INEQUALITY
Rule 92    VARSYM -> LESS
Rule 93    VARSYM -> LEQ
Rule 94    VARSYM -> GREATER
Rule 95    VARSYM -> GEQ
Rule 96    VARSYM -> AND
Rule 97    VARSYM -> OR
Rule 98    LITERAL -> FLOAT
Rule 99    LITERAL -> INTEGER
Rule 100   LITERAL -> BOOL
Rule 101   LITERAL -> CHAR
Rule 102   LITERAL -> STRING
Rule 103   USED_VAR -> IDENTIFIER
Rule 104   USED_TYPENAME -> TYPENAME
Rule 105   PARAM -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 96
ARROW                : 31 51 68
BACKTICK             : 80 80
BOOL                 : 100
CHAR                 : 101
CLOSE_BRACE          : 2 3 17 18 54
CLOSE_PAREN          : 36 38 62 63 71 72 77
DIVIDE               : 87
ELSE                 : 53
ENDSTATEMENT         : 2 4 7 19 66
EQUALITY             : 90
EQUALS               : 11 41 42 45 46
FLOAT                : 72 98
GEQ                  : 95
GIVEN                : 45 46
GREATER              : 94
IDENTIFIER           : 1 6 12 35 37 80 103 105
IF                   : 53
IMPORT               : 6
IN                   : 52
INEQUALITY           : 91
INTEGER              : 26 71 99
LAMBDA               : 51
LEFTASSOC            : 27
LEQ                  : 93
LESS                 : 92
LET                  : 52
MATCH                : 54
MINUS                : 49 71 72 85
MODULE               : 1
MODULO               : 88
NEWTYPE              : 11
NONASSOC             : 29
OF                   : 54
OPEN_BRACE           : 2 3 17 18 54
OPEN_PAREN           : 36 38 62 63 71 72 77
OR                   : 97
PIPE                 : 14
PLUS                 : 84
POW                  : 89
RIGHTASSOC           : 28
SETFIX               : 26
STRING               : 102
TIMES                : 86
TYPENAME             : 11 16 34 73 75 104
WHERE                : 1 42 44
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AEXP                 : 56 57 64 65
ALT                  : 66 67
ALTS                 : 54 66
APAT                 : 37 38 51 70 73 82
APATS                : 37 38 51 73 82
ASSOCIATIVITY        : 26
ATYPE                : 30 31 32
ATYPES               : 16 32
BODY                 : 1
CONSTRUCTION_PARAMS  : 64
CONSTRUCTOR          : 14 15
CONSTRUCTORS         : 11 14
DECLARATION          : 10 19 20
DECLARATIONS         : 42 44 52
DECLARATIONS_LIST    : 17 19
EXP                  : 41 42 45 45 46 46 51 52 53 53 53 54 62 68
FEXP                 : 55 56
FIXITY_DECLARATION   : 24 0
FUNCTION_LHS         : 22 38
GDRHS                : 43 44 46
GEN_DECLARATION      : 21
IMPORT_DECLARATION   : 4 5
IMPORT_DECLARATIONS  : 2 4
INFIX_EXP            : 47 48 49
INFIX_FUNCTION       : 40 79
INFIX_FUNCTION_DEFINITION : 39
LEXP                 : 48 50
LITERAL              : 60 76
LPAT                 : 23 40 40 68 77
MODULE_DEFINITION    : 
OP                   : 26 48 63
OPERATOR_FUNC        : 61
PARAM                : 74
RHS                  : 22 23
TOP_DECLARATION      : 7 8
TOP_DECLARATIONS     : 2 3 7
TYPE                 : 31 36
TYPE_DECLARATION     : 9
TYVARS               : 11 12
USED_TYPENAME        : 59
USED_VAR             : 58
VAROP                : 81
VARSYM               : 78

Parsing method: LALR

state 0

    (0) S' -> . FIXITY_DECLARATION
    (26) FIXITY_DECLARATION -> . SETFIX ASSOCIATIVITY INTEGER OP

    SETFIX          shift and go to state 2

    FIXITY_DECLARATION             shift and go to state 1

state 1

    (0) S' -> FIXITY_DECLARATION .



state 2

    (26) FIXITY_DECLARATION -> SETFIX . ASSOCIATIVITY INTEGER OP
    (27) ASSOCIATIVITY -> . LEFTASSOC
    (28) ASSOCIATIVITY -> . RIGHTASSOC
    (29) ASSOCIATIVITY -> . NONASSOC

    LEFTASSOC       shift and go to state 4
    RIGHTASSOC      shift and go to state 5
    NONASSOC        shift and go to state 6

    ASSOCIATIVITY                  shift and go to state 3

state 3

    (26) FIXITY_DECLARATION -> SETFIX ASSOCIATIVITY . INTEGER OP

    INTEGER         shift and go to state 7


state 4

    (27) ASSOCIATIVITY -> LEFTASSOC .

    INTEGER         reduce using rule 27 (ASSOCIATIVITY -> LEFTASSOC .)


state 5

    (28) ASSOCIATIVITY -> RIGHTASSOC .

    INTEGER         reduce using rule 28 (ASSOCIATIVITY -> RIGHTASSOC .)


state 6

    (29) ASSOCIATIVITY -> NONASSOC .

    INTEGER         reduce using rule 29 (ASSOCIATIVITY -> NONASSOC .)


state 7

    (26) FIXITY_DECLARATION -> SETFIX ASSOCIATIVITY INTEGER . OP
    (81) OP -> . VAROP
    (78) VAROP -> . VARSYM
    (79) VAROP -> . INFIX_FUNCTION
    (84) VARSYM -> . PLUS
    (85) VARSYM -> . MINUS
    (86) VARSYM -> . TIMES
    (87) VARSYM -> . DIVIDE
    (88) VARSYM -> . MODULO
    (89) VARSYM -> . POW
    (90) VARSYM -> . EQUALITY
    (91) VARSYM -> . INEQUALITY
    (92) VARSYM -> . LESS
    (93) VARSYM -> . LEQ
    (94) VARSYM -> . GREATER
    (95) VARSYM -> . GEQ
    (96) VARSYM -> . AND
    (97) VARSYM -> . OR
    (80) INFIX_FUNCTION -> . BACKTICK IDENTIFIER BACKTICK

    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    MODULO          shift and go to state 16
    POW             shift and go to state 17
    EQUALITY        shift and go to state 18
    INEQUALITY      shift and go to state 19
    LESS            shift and go to state 20
    LEQ             shift and go to state 21
    GREATER         shift and go to state 22
    GEQ             shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25
    BACKTICK        shift and go to state 26

    OP                             shift and go to state 8
    VAROP                          shift and go to state 9
    VARSYM                         shift and go to state 10
    INFIX_FUNCTION                 shift and go to state 11

state 8

    (26) FIXITY_DECLARATION -> SETFIX ASSOCIATIVITY INTEGER OP .

    $end            reduce using rule 26 (FIXITY_DECLARATION -> SETFIX ASSOCIATIVITY INTEGER OP .)


state 9

    (81) OP -> VAROP .

    $end            reduce using rule 81 (OP -> VAROP .)


state 10

    (78) VAROP -> VARSYM .

    $end            reduce using rule 78 (VAROP -> VARSYM .)


state 11

    (79) VAROP -> INFIX_FUNCTION .

    $end            reduce using rule 79 (VAROP -> INFIX_FUNCTION .)


state 12

    (84) VARSYM -> PLUS .

    $end            reduce using rule 84 (VARSYM -> PLUS .)


state 13

    (85) VARSYM -> MINUS .

    $end            reduce using rule 85 (VARSYM -> MINUS .)


state 14

    (86) VARSYM -> TIMES .

    $end            reduce using rule 86 (VARSYM -> TIMES .)


state 15

    (87) VARSYM -> DIVIDE .

    $end            reduce using rule 87 (VARSYM -> DIVIDE .)


state 16

    (88) VARSYM -> MODULO .

    $end            reduce using rule 88 (VARSYM -> MODULO .)


state 17

    (89) VARSYM -> POW .

    $end            reduce using rule 89 (VARSYM -> POW .)


state 18

    (90) VARSYM -> EQUALITY .

    $end            reduce using rule 90 (VARSYM -> EQUALITY .)


state 19

    (91) VARSYM -> INEQUALITY .

    $end            reduce using rule 91 (VARSYM -> INEQUALITY .)


state 20

    (92) VARSYM -> LESS .

    $end            reduce using rule 92 (VARSYM -> LESS .)


state 21

    (93) VARSYM -> LEQ .

    $end            reduce using rule 93 (VARSYM -> LEQ .)


state 22

    (94) VARSYM -> GREATER .

    $end            reduce using rule 94 (VARSYM -> GREATER .)


state 23

    (95) VARSYM -> GEQ .

    $end            reduce using rule 95 (VARSYM -> GEQ .)


state 24

    (96) VARSYM -> AND .

    $end            reduce using rule 96 (VARSYM -> AND .)


state 25

    (97) VARSYM -> OR .

    $end            reduce using rule 97 (VARSYM -> OR .)


state 26

    (80) INFIX_FUNCTION -> BACKTICK . IDENTIFIER BACKTICK

    IDENTIFIER      shift and go to state 27


state 27

    (80) INFIX_FUNCTION -> BACKTICK IDENTIFIER . BACKTICK

    BACKTICK        shift and go to state 28


state 28

    (80) INFIX_FUNCTION -> BACKTICK IDENTIFIER BACKTICK .

    $end            reduce using rule 80 (INFIX_FUNCTION -> BACKTICK IDENTIFIER BACKTICK .)

